# server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  cabal.project  cabal.project.freeze  docker-compose.yml  server.cabal
.github/workflows/: build.yml
app/: Main.hs
k8s/base/: deployment.yaml
k8s/overlays/default/patches/: deployment.yaml
migrations/: 0001_init.sql  0002_add_user_profile.sql  0003_add_password_reset_tokens.sql  0004_pause_a_hunt.sql  0005_user_location.sql  0006_photo_step_answer.sql  0007_expand_hunt_image.sql  0008_qr_scan_in_ar.sql
src/: config.rs  error.rs  lib.rs  main.rs  routes.rs  server.rs  state.rs
src/Auth/: Api.hs  Config.hs  Database.hs  Email.hs  Models.hs  Server.hs  Session.hs  Types.hs  Webauthn.hs
src/Auth/Crypto/: Base32.hs  Password.hs  Token.hs  Totp.hs
src/api/: mod.rs
src/api/auth/: dto.rs  email.rs  handlers.rs  mod.rs  models.rs  router.rs  session.rs  webauthn.rs
src/api/auth/crypto/: jwt.rs  mod.rs  password.rs  token.rs  totp.rs
src/api/hunt_steps/: dto.rs  handlers.rs  models.rs  routes.rs
src/api/hunts/: dto.rs  handlers.rs  mod.rs  models.rs  routes.rs
src/api/hunts/hunt_steps/: dto.rs  handlers.rs  models.rs  routes.rs
src/api/hunts/live_ops/: dto.rs  handlers.rs  routes.rs
src/api/hunts/step_photo_sessions/: dto.rs  handlers.rs  routes.rs
src/api/middleware/: caching.rs  mod.rs  ownership.rs
src/api/notifications/: dto.rs  service.rs
src/api/profiles/: dto.rs  handlers.rs  mod.rs  models.rs  routes.rs  service.rs
src/api/upload/: dto.rs  handlers.rs  routes.rs
src/api/ws/: routes.rs  ws.rs
src/auth/: db.rs  email.rs  error.rs  mod.rs  models.rs  session.rs  state.rs  webauthn.rs
src/auth/crypto/: mod.rs  token.rs  totp.rs
src/event/: event.rs  event_handler.rs  mod.rs
src/infra/: mod.rs  s3.rs
src/infra/kafka/: consumer.rs  mod.rs  producer.rs
src/infra/redis/: cache.rs  client.rs  mod.rs  pubsub.rs
src/utils/: awnser.rs  contants.rs  db.rs  geo.rs  image_data.rs  json.rs  mod.rs  types.rs
tests/: run_smoke.sh  smoke.sh  smoke_hunt.sh  smoke_profile.sh  smoke_user.sh  smoke_ws.sh
tools/: Migrate.hs
