[package]
name = "server"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "lootopia backend server"
license = "MIT"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws", "multipart"] }
axum-extra = {version = "0.12.6", features=["cookie"]}
base32 = "0.5.1"
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
futures = "0.3.32"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-credential-types = "1.2"
aws-sdk-s3 = "1.108"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
redis = { version = "0.27.6", features = ["tokio-comp", "connection-manager"] }
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
hmac = "0.12.1"
lettre = { version = "0.11.19", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls", "tokio1"] }
pbkdf2 = "0.12.2"
rand = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.10.6"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros", "migrate"] }
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
webauthn-rs = { version = "0.5.0", features = ["danger-allow-state-serialisation"] }
paste = "1.0.15"
http-body-util = "0.1.3"
image_hasher = "3.1.1"
image = "0.25.10"

[profile.release]
opt-level = 2
