cabal-version:      3.0
name:               server
version:            0.1.0.0
synopsis:           A small, batteries-included auth server in Haskell (MFA, passkeys, TOTP, email verification).
description:        See README.md for an overview of the architecture and the HTTP API.
license:            MIT
author:             you
maintainer:         you@example.com
build-type:         Simple

common warnings
    ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns

common deps
    build-depends:
        base                 >=4.18 && <5
      , aeson
      , base16-bytestring
      , bytestring
      , containers
      , cookie
      , crypton
      , directory
      , hourglass
      , http-api-data
      , http-types
      , memory
      , mime-mail
      , monad-logger
      , mtl
      , persistent
      , persistent-postgresql
      , resource-pool
      , resourcet
      , servant
      , servant-server
      , smtp-mail
      , text
      , time
      , transformers
      , unliftio
      , unordered-containers
      , validation
      , wai
      , wai-cors
      , wai-extra
      , warp
      , webauthn

library
    import:           warnings, deps
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DerivingStrategies
        LambdaCase
        OverloadedStrings
        RecordWildCards
        TypeFamilies
    exposed-modules:
        Auth.Config
        Auth.Types
        Auth.Models
        Auth.Database
        Auth.Crypto.Base32
        Auth.Crypto.Password
        Auth.Crypto.Token
        Auth.Crypto.Totp
        Auth.Email
        Auth.Session
        Auth.Webauthn
        Auth.Api
        Auth.Server

executable server
    import:           warnings, deps
    hs-source-dirs:   app
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:    server
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable migrate
    import:           warnings, deps
    hs-source-dirs:   tools
    main-is:          Migrate.hs
    default-language: GHC2021
    build-depends:    server
    ghc-options:      -threaded
